--- a/src/app/dashboard/header/header.component.html
+++ b/src/app/dashboard/header/header.component.html
@@ -4,7 +4,7 @@
       <div class="col-md-12">
         <ejs-appbar class="bg-purple-500">
           <img alt="logo" class="logo_img h-16 w-16 mr-3" routerLink="/schedule" src="assets/img/logo.png">
-          <span class="logo_text regular text-3xl"><b>MySchedule</b></span>
+          <span class="logo_text regular text-3xl" routerLink="/schedule"><b>MySchedule</b></span>
 
           <div class="e-appbar-spacer"></div>
           <div class="flex gap-5">
