--- a/src/app/dashboard/schedule/schedule.component.html
+++ b/src/app/dashboard/schedule/schedule.component.html
@@ -2,21 +2,9 @@
 <app-search (dataEvent)="getData($event)"></app-search>
 
 <div class="control-section" xmlns="http://www.w3.org/1999/html">
-
   <div class="content-wrapper">
-
-
-    <app-create-schedule-modal [scheduleData]="scheduleData"
-                               [userID]="userID"></app-create-schedule-modal>
-
-
-    <ejs-schedule #scheduleObj (actionBegin)="onActionBegin($event)"
-                  [currentView]="currentView"
-                  [endHour]='endHour' [eventSettings]="eventSettings" [readonly]="false"
-                  [rowAutoHeight]='rowAutoHeight'
-                  [selectedDate]="selectedDate"
-                  [showWeekend]="showWeekend" [startHour]='startHour' class="rounded-2xl" cssClass='adaptive-rows'
-                  height='100vh' id='schedule' timezone="Europe/Bratislava" width='100%'>
+    <app-create-schedule-modal [scheduleData]="scheduleData" [userID]="userID"></app-create-schedule-modal>
+    <ejs-schedule #scheduleObj (actionBegin)="onActionBegin($event)" [currentView]="currentView" [endHour]='endHour' [eventSettings]="eventSettings" [readonly]="false" [rowAutoHeight]='rowAutoHeight' [selectedDate]="selectedDate" [showWeekend]="showWeekend" [startHour]='startHour' class="rounded-2xl" cssClass='adaptive-rows' height='65vh' id='schedule' timezone="Europe/Bratislava" width='100%'>
 
       <e-views>
         <e-view option="Day"></e-view>
@@ -183,7 +171,8 @@
             <div class="event-content">
               <div>
                 <h5 class="font-bold mb-2 ">Teacher:</h5>
-                <div class="pr-4">{{ getTeacherNameById(data.teacher_id) }}</div>
+                <div class="pr-4">{{ getTeacherNameById(data.teacher_id) }} {{ getTeacherSurnameById(data.teacher_id) }}</div>
+                <div class="pr-4"></div>
                 <h5 class="font-bold mt-4 mb-2">Subject:</h5>
                 <div class="pr-4">{{ getSubjectNameById(data.subject_id) }}</div>
               </div>
@@ -217,11 +206,12 @@
         <ng-template #eventSettingsTemplate let-data>
           <div [ngStyle]="{'background-color': getSubjectColor(data.subject_type)}" class="template-wrap p-4">
             <div class="mb-2"><h6 class="mb-1">{{ getTeacherNameById(data.teacher_id) }}</h6></div>
+            <div class="mb-2"><h6 class="mb-1">{{getTeacherSurnameById(data.teacher_id)}}</h6></div>
             <div class="mb-2"><h5 class="mb-1">{{ getSubjectNameById(data.subject_id) }}</h5></div>
             <div class="classroom-type">
               <h6 class="mb-1">{{ getClassroomNameById(data.classroom_id) }}</h6>
-              <h6>{{ getSubjectTypeById(data.subject_type) }}</h6>
             </div>
+            <h6>{{ getSubjectTypeById(data.subject_type) }}</h6>
           </div>
         </ng-template>
 
