--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="loading" class="LoadingDialogContent">
   <h1 class="loading-text">Loading...</h1>
-  <img src="../../../assets/gif/loading.gif" alt="Loading...">
+  <img ngSrc="../assets/gif/loading.gif" alt="Loading..." height="50" width="50">
 </div>
 <div class="h-full" *ngIf="!loading && initialized">
   <router-outlet></router-outlet>
