--- a/src/app/dashboard/schedule/schedule.component.css
+++ b/src/app/dashboard/schedule/schedule.component.css
@@ -213,7 +213,7 @@ td.e-field.button-customization:nth-child(2) {
 .material3 .e-quick-popup-wrapper .e-popup-footer,
 .material3-dark .e-quick-popup-wrapper .e-popup-footer {
   display: block !important;
-  padding: 0px 18px 8px 22px !important;
+  padding: 0 18px 8px 22px !important;
 }
 
 .highcontrast .quick-info-header,
