When saving one cell when there are no schedules, it asks to create a new schedule, translated into English, corrected date and time format of own schedules

--- a/src/app/dashboard/schedule/schedule.component.css
+++ b/src/app/dashboard/schedule/schedule.component.css
@@ -79,8 +79,9 @@ td.e-textlabel {
 
 .event-content > div {
   display: flex;
-  column-gap: 2rem;
+  column-gap: 0.5rem;
   align-items: baseline;
+  justify-content: space-evenly;
 }
 
 .event-content > div > div {
