--- a/src/app/dashboard/my-schedule/my-schedule.component.html
+++ b/src/app/dashboard/my-schedule/my-schedule.component.html
@@ -12,7 +12,7 @@
         <div class="flex items-center justify-between">
           <div>
             <h2 class="text-lg font-semibold">{{schedule.name}}</h2>
-            <p class="text-sm text-gray-500">{{schedule.updatedAt}}</p>
+           <p class="text-sm text-gray-500">{{schedule.updatedAt | formatDate}}</p>
           </div>
           <div class="flex justify-between">
             <div ejs-button class="inline-flex w-fit items-center mx-4"
@@ -35,11 +35,11 @@
   <ng-template #noSchedules>
   <div  class="min-h-screen bg-white flex items-center justify-center text-center">
     <div>
-      <h2 class="text-lg font-semibold">У вас пока нет расписаний</h2>
-      <p class="text-sm text-gray-500 mb-4">Создайте свое первое расписание, чтобы начать планировать свои занятия</p>
+      <h2 class="text-xxl font-semibold">You don't have schedules yet</h2>
+      <p class="text-m text-gray-500 mb-2">Create your first schedule to start planning your classes</p>
       <button ejs-button class="inline-flex w-fit items-center mx-4"
               [routerLink]="['/schedule']">
-        Создать расписание
+        Create schedule
       </button>
     </div>
   </div>
