--- a/src/app/dashboard/my-schedule-detail/my-schedule-detail.component.css
+++ b/src/app/dashboard/my-schedule-detail/my-schedule-detail.component.css
@@ -19,6 +19,12 @@
   border-radius: 4px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   margin-top: 5px;
+  height: 100%;
+}
+
+.e-schedule .e-vertical-view .e-day-wrapper .e-appointment .e-appointment-details {
+  height: 100%;
+  padding-bottom: 4px;
 }
 
 .quick-info-title {
