--- a/src/app/dashboard/schedule/schedule.component.html
+++ b/src/app/dashboard/schedule/schedule.component.html
@@ -10,11 +10,10 @@
 <div class="control-section">
   <div class="content-wrapper">
     <app-create-schedule-modal [scheduleData]="scheduleData" [userID]="userID" *ngIf="userRole !== 'ADMIN'"></app-create-schedule-modal>
-    <ejs-schedule #scheduleObj (actionBegin)="onActionBegin($event)" [currentView]="currentView" [endHour]='endHour'
-                  [eventSettings]="eventSettings" [readonly]="false" [rowAutoHeight]='rowAutoHeight'
-                  [selectedDate]="selectedDate" [showWeekend]="showWeekend" [startHour]='startHour' class="rounded-2xl"
-                  cssClass='adaptive-rows' height='65vh' id='schedule' timezone="Europe/Bratislava" width='100%'>
-
+<ejs-schedule #scheduleObj (actionBegin)="onActionBegin($event)" [currentView]="currentView" [endHour]='endHour'
+[eventSettings]="eventSettings" [readonly]="userRole !== 'ADMIN'" [rowAutoHeight]='rowAutoHeight'
+[selectedDate]="selectedDate" [showWeekend]="showWeekend" [startHour]='startHour' class="rounded-2xl"
+cssClass='adaptive-rows' height='65vh' id='schedule' timezone="UTC" width='100%'>
       <e-views>
         <e-view option="Day"></e-view>
         <e-view option="Week"></e-view>
