Fixed updating and creating, refactor schedule.component.ts

--- a/src/app/dashboard/schedule/schedule.component.html
+++ b/src/app/dashboard/schedule/schedule.component.html
@@ -347,17 +347,17 @@ cssClass='adaptive-rows' height='65vh' id='schedule' timezone="UTC" width='100%'
 
               </td>
             </tr>
-            <tr class="flex flex-col">
-              <td class="e-textlabel">Type of lesson</td>
-              <td colspan="4">
-                <ejs-dropdownlist [dataSource]='lessonTypes'
-                                  [value]='data.subject_type'
-                                  class="e-field" data-name="subject_type"
-                                  id='subject_type'
-                                  placeholder='Select type'
-                                  text="Lekcia"></ejs-dropdownlist>
-              </td>
-            </tr>
+<!--            <tr class="flex flex-col">-->
+<!--              <td class="e-textlabel">Type of lesson</td>-->
+<!--              <td colspan="4">-->
+<!--                <ejs-dropdownlist [dataSource]='lessonTypes'-->
+<!--                                  [value]='data.subject_type'-->
+<!--                                  class="e-field" data-name="subject_type"-->
+<!--                                  id='subject_type'-->
+<!--                                  placeholder='Select type'-->
+<!--                                  text="Lekcia"></ejs-dropdownlist>-->
+<!--              </td>-->
+<!--            </tr>-->
             <tr class="flex flex-col">
               <td class="e-textlabel">Group</td>
               <td colspan="4">
