Refactor my schedule, my schedule detail, search

--- a/src/app/dashboard/my-schedule-detail/my-schedule-detail.component.html
+++ b/src/app/dashboard/my-schedule-detail/my-schedule-detail.component.html
@@ -3,67 +3,69 @@
   <div class="content-wrapper">
 
     <ejs-schedule #scheduleObj
-                  timezone="UTC"
-                  [currentView]="currentView" [endHour]='endHour' [eventSettings]="eventSettings"
+                  [currentView]="currentView"
+                  [endHour]='endHour' [eventSettings]="eventSettings" [readonly]="true"
                   [rowAutoHeight]='rowAutoHeight'
-                  [selectedDate]="selectedDate" [startHour]='startHour' [showWeekend]="showWeekend" class="rounded-2xl" cssClass='adaptive-rows'
-                  height='90vh' id='schedule' width='100%' [readonly]="true">
+                  [selectedDate]="selectedDate" [showWeekend]="showWeekend" [startHour]='startHour' class="rounded-2xl"
+                  cssClass='adaptive-rows'
+                  height='90vh' id='schedule' timezone="UTC" width='100%'>
 
       <e-views>
         <e-view option="Day"></e-view>
         <e-view option="Week"></e-view>
       </e-views>
-        <ng-template #quickInfoTemplatesHeader let-data>
-          <div class="quick-info-header">
-            <div [ngStyle]="getHeaderStyles(data)" class="quick-info-header-content">
+      <ng-template #quickInfoTemplatesHeader let-data>
+        <div class="quick-info-header">
+          <div [ngStyle]="getHeaderStyles(data)" class="quick-info-header-content">
 
-              <div class="quick-info-title">{{ data.subject.name }} ({{ data.subject.type}})</div>
-              <div class="duration-text">{{getHeaderDetails(data)}}</div>
-            </div>
+            <div class="quick-info-title">{{ data.subject.name }} ({{ data.subject.type }})</div>
+            <div class="duration-text">{{ getHeaderDetails(data) }}</div>
           </div>
-        </ng-template>
-        <ng-template #quickInfoTemplatesContent let-data>
-          <ng-container [ngTemplateOutletContext]="{data:data}"
-                        [ngTemplateOutlet]="eventContent"></ng-container>
-        </ng-template>
+        </div>
+      </ng-template>
+      <ng-template #quickInfoTemplatesContent let-data>
+        <ng-container [ngTemplateOutletContext]="{data:data}"
+                      [ngTemplateOutlet]="eventContent"></ng-container>
+      </ng-template>
 
 
       <ng-template #eventSettingsTemplate let-data>
         <div [ngStyle]="{'background-color': getSubjectColor(data.subject_type)}" class="template-wrap">
           <div class="mb-4"><h4>{{ data.teacher.name }}</h4></div>
-          <div class="classroom-type"><h4 class="mb-4">{{data.teacher.surname}}</h4></div>
+          <div class="classroom-type"><h4 class="mb-4">{{ data.teacher.surname }}</h4></div>
           <div class="mb-4"><h4>{{ data.subject.name }}</h4></div>
           <div class="mb-4"><h4>{{ data.classroom.code }}</h4></div>
 
           <h4>{{ data.subject.type }}</h4>
         </div>
       </ng-template>
-        <ng-template #eventContent let-data="data">
-          <div class="quick-info-content">
-            <div class="event-content">
-              <div class="meeting-subject-wrap">
-                <label>Teacher</label>:
-                <span>{{ data.teacher.name }} {{data.teacher.surname}}</span>
-              </div>
-              <div class="meeting-subject-wrap">
-                <label>Classroom</label>:
-                <span>{{data.classroom.code}}</span>
-              </div>
-              <div class="meeting-subject-wrap">
-                <label>Group</label>:
-                <span>{{data.group.name}}</span>
-              </div>
+      <ng-template #eventContent let-data="data">
+        <div class="quick-info-content">
+          <div class="event-content">
+            <div class="meeting-subject-wrap">
+              <label>Teacher</label>:
+              <span>{{ data.teacher.name }} {{ data.teacher.surname }}</span>
+            </div>
+            <div class="meeting-subject-wrap">
+              <label>Classroom</label>:
+              <span>{{ data.classroom.code }}</span>
+            </div>
+            <div class="meeting-subject-wrap">
+              <label>Group</label>:
+              <span>{{ data.group.name }}</span>
             </div>
           </div>
-        </ng-template>
+        </div>
+      </ng-template>
 
       <ng-template #quickInfoTemplatesFooter let-data>
-        <ng-container [ngTemplateOutlet]="eventFooter"
-                      [ngTemplateOutletContext]="{data:data}"></ng-container>
+        <ng-container [ngTemplateOutletContext]="{data:data}"
+                      [ngTemplateOutlet]="eventFooter"></ng-container>
       </ng-template>
       <ng-template #eventFooter let-data="data">
         <div class="e-event-footer">
-          <button ejs-button id="delete" cssClass="e-flat e-danger" (click)="deleteScheduleCell(data.id)">Delete</button>
+          <button (click)="deleteScheduleCell(data.id)" cssClass="e-flat e-danger" ejs-button id="delete">Delete
+          </button>
         </div>
       </ng-template>
     </ejs-schedule>
