--- a/src/app/dashboard/my-schedule/my-schedule.component.html
+++ b/src/app/dashboard/my-schedule/my-schedule.component.html
@@ -2,45 +2,47 @@
 
 <div class="min-h-screen bg-white">
   <div class="px-4 py-2 bg-[#f7f7f7]">
-<div class="px-4 py-2">
+    <div class="px-4 py-2">
 
 
-  <div *ngIf="(mySchedules | async)?.length; else noSchedules">
-    <div class="mb-4" *ngFor="let schedule of mySchedules | async">
-    <div class="rounded-lg border bg-card text-card-foreground shadow-sm" data-v0-t="card">
-      <div class="p-6">
-        <div class="flex items-center justify-between">
-          <div>
-            <h2 class="text-lg font-semibold">{{schedule.name}}</h2>
-           <p class="text-sm text-gray-500">{{schedule.updatedAt | formatDate}}</p>
-          </div>
-          <div class="flex justify-between">
-            <div ejs-button class="inline-flex w-fit items-center mx-4"
-                 [routerLink]="['.', schedule.id]">
-              Open schedule
+      <div *ngIf="(mySchedules | async)?.length; else noSchedules">
+        <div *ngFor="let schedule of mySchedules | async" class="mb-4">
+          <div class="rounded-lg border bg-card text-card-foreground shadow-sm" data-v0-t="card">
+            <div class="p-6">
+              <div class="flex items-center justify-between">
+                <div>
+                  <h2 class="text-lg font-semibold">{{ schedule.name }}</h2>
+                  <p class="text-sm text-gray-500">{{ schedule.updatedAt | formatDate }}</p>
+                </div>
+                <div class="flex justify-between">
+                  <div [routerLink]="['.', schedule.id]" class="inline-flex w-fit items-center mx-4"
+                       ejs-button>
+                    Open schedule
+                  </div>
+                  <button #confirmButton (click)="confirmBtnClick(schedule.id)" cssClass="e-danger dlgbtn" ejs-button>
+                    Delete schedule
+                  </button>
+
+                </div>
+
+
+              </div>
             </div>
-            <button ejs-button cssClass="e-danger dlgbtn" #confirmButton (click)="confirmBtnClick(schedule.id)">Delete schedule</button>
-
           </div>
-
-
         </div>
       </div>
     </div>
   </div>
 </div>
-  </div>
-</div>
-</div>
-  <ng-template #noSchedules>
-  <div  class="min-h-screen bg-white flex items-center justify-center text-center">
+<ng-template #noSchedules>
+  <div class="min-h-screen bg-white flex items-center justify-center text-center">
     <div>
       <h2 class="text-xxl font-semibold">You don't have schedules yet</h2>
       <p class="text-m text-gray-500 mb-2">Create your first schedule to start planning your classes</p>
-      <button ejs-button class="inline-flex w-fit items-center mx-4"
-              [routerLink]="['/schedule']">
+      <button [routerLink]="['/schedule']" class="inline-flex w-fit items-center mx-4"
+              ejs-button>
         Create schedule
       </button>
     </div>
   </div>
-  </ng-template>
+</ng-template>
