--- a/src/app/dashboard/my-schedule-detail/my-schedule-detail.component.css
+++ b/src/app/dashboard/my-schedule-detail/my-schedule-detail.component.css
@@ -9,9 +9,11 @@
   flex-direction: column;
   padding: 5px 10px 5px;
 }
+
 .e-appointment {
   width: 100%;
 }
+
 .template-wrap {
   padding: 10px 4px;
   width: 100%;
@@ -133,7 +135,7 @@
 .material3 .e-quick-popup-wrapper .e-popup-footer,
 .material3-dark .e-quick-popup-wrapper .e-popup-footer {
   display: block !important;
-  padding: 0px 18px 8px 22px !important;
+  padding: 0 18px 8px 22px !important;
 }
 
 .material3 .e-quick-popup-wrapper .e-event-popup .e-popup-header,
