--- a/src/app/dashboard/search/search.component.html
+++ b/src/app/dashboard/search/search.component.html
@@ -1,21 +1,21 @@
 <div class="flex flex-col items-center justify-center py-4">
   <div class="p-5 bg-white rounded-xl shadow-md">
     <div class="flex flex-col items-center space-y-5">
-      <ejs-dropdownlist id="types" #typeList [dataSource]="searchData" (change)="onChange1()"
-                        [(value)]="typeValue"
+      <ejs-dropdownlist #typeList (change)="onChange1()" [(value)]="typeValue" [dataSource]="searchData"
                         [fields]="fields"
-                        popupHeight='auto'
-                        class="w-64">
+                        class="w-64"
+                        id="types"
+                        popupHeight='auto'>
 
       </ejs-dropdownlist>
-      <ejs-dropdownlist #searchList id='search'
-                        [dataSource]='data'
-                        (change)="onChange2()"
+      <ejs-dropdownlist #searchList (change)="onChange2()"
                         [(value)]="searchValue"
+                        [allowFiltering]='true'
+                        [dataSource]='data'
+                        [enabled]='false'
                         [fields]='dataFields'
-                        ignoreAccent="true"
-                        popupHeight='auto' [enabled]='false'
-                        [allowFiltering]='true' class="w-64">
+                        class="w-64" id='search'
+                        ignoreAccent="true" popupHeight='auto'>
 
       </ejs-dropdownlist>
     </div>
